--- a/Chalkable.Web/assets/jade/activities/grading/GradingStudentClassSummary.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/GradingStudentClassSummary.jade
@@ -23,7 +23,7 @@ selectedId = topData.getSelectedItemId()
             .name
                 |#{Msg.Avg} (#{self.getAvg()})
     .grading-chart-part.relative
-        .chart-bg
+        .chart-bg2
         .chart-container-1
             +Chart()(
                 data-options = self.getChartOptions()
