--- a/Chalkable.Web/assets/sass/partials/_controls.scss
+++ b/Chalkable.Web/assets/sass/partials/_controls.scss
@@ -9,3 +9,4 @@
 @import "partials/controls/_paginator";
 @import "partials/controls/_select";
 @import "partials/controls/_carousel";
+@import "partials/controls/_charts";
