--- a/Chalkable.Web/assets/jade/activities/attendance/AdminSummaryMp.jade
+++ b/Chalkable.Web/assets/jade/activities/attendance/AdminSummaryMp.jade
@@ -4,5 +4,5 @@ valuesEnum = chlk.models.attendance.AttendanceTypeEnum
 .big-chart-containner
     +AdminAtteddanceMpChart(self.getAttendanceStats())
 .attendance-students.mp-students
-    if self.getAbsentAndLateStudents()
-        +StudentsTpl(self.getAbsentAndLateStudents(), Msg.Students_with_attendance_issues, false, false, 3).attendance-mp
+    if self.getAbsentAndLateStudents() && self.getAbsentAndLateStudents().length
+        +StudentsTpl(self.getAbsentAndLateStudents(), Msg.Students_with_attendance_issues, 3).attendance-mp
