--- a/Chalkable.Web/assets/jade/activities/attendance/StudentReasonsCombo.jade
+++ b/Chalkable.Web/assets/jade/activities/attendance/StudentReasonsCombo.jade
@@ -1,4 +1,4 @@
-currentReasons = self.getCurrentReasons();
+currentReasons = self.getCurrentReasons() || [];
 currentId = self.getCurrentId();
 +Select('attendanceReadons')(disabled=!currentReasons.length).attendance-reason-select.grey-select
     each reason in currentReasons
