--- a/Chalkable.Web/assets/sass/partials/main/_buttons.scss
+++ b/Chalkable.Web/assets/sass/partials/main/_buttons.scss
@@ -14,6 +14,22 @@
   background: url(images/icons/close-item.png) 0% 50% no-repeat;
 }
 
+.all-button{
+  @include border-radius(7px);
+  border: 1px solid #b3b3b3;
+  @include box-shadow(0 1px 1px #cacaca, inset 0 1px 0 white);
+  @include background(linear-gradient(top, #f5f5f5, #e0e0e0));
+  color: #3d3d3d;
+  font: bold 14px/52px Arial;
+  text-shadow: 1px 1px 0 white;
+  text-transform: uppercase;
+  cursor: pointer;
+
+  &:hover{
+    @include background(linear-gradient(top, #e5e5e5, #d0d0d0));
+  }
+}
+
 .opacity-button{
   &:hover{
     opacity: 0.8;
