--- a/Chalkable.Web/assets/jade/activities/discipline/ClassDisciplinesView.jade
+++ b/Chalkable.Web/assets/jade/activities/discipline/ClassDisciplinesView.jade
@@ -38,11 +38,18 @@ redirectData = self.getRedirectData()
                             .short-discipline-info-block
                                 .status-block
                                 .triangle
+                        typesToolTip = self.getTypesForToolTip(i);
+                        .right.tooltip-container
+                            if typesToolTip
+                                div(data-tooltip=typesToolTip).with-discipline
+                        .right.saving-block=Msg.Saving.toLowerCase()
+                        .right.saved-block=Msg.Saved.toLowerCase()
                     +ActionForm('discipline','setDisciplines')(style='display: none;').discipline-form-block
                         input(name="disciplinesJson", type="hidden")
                         +Hidden('controller', redirectData.controller)
                         +Hidden('action', redirectData.action)
                         +Hidden('params', redirectData.params)
+                        +Hidden('time').save-time
                         div(
                             name="discipline",
                             data-class-person-id=item.getClassPersonId().valueOf(),
