--- a/Chalkable.Web/assets/jade/activities/discipline/ClassDisciplinesView.jade
+++ b/Chalkable.Web/assets/jade/activities/discipline/ClassDisciplinesView.jade
@@ -19,11 +19,17 @@ redirectData = self.getRedirectData()
                )#discipline-date.tb-date-picker
     .people-list-container.not-transparent
         .top.panel-bg
+            span.total-count=self.getTotalText()
         .action-bar.buttons.filter
             .container.panel-bg
                 .left
                     +ActionLinkWithPrepend('attendance', 'sortStudents', ['false'])(class=self.isByLastName()?"":"pressed").action-button.first-last=Msg.First_name
                     +ActionLinkWithPrepend('attendance', 'sortStudents', [true])(class=self.isByLastName()?"pressed":"").action-button.first-last=Msg.Last_name
+                .right
+                    input(placeholder='Filter list...', name="filter", value=self.getFilter()).people-search
+                    .people-search-imgs
+                        label.people-search-img
+                        label.people-search-close.opacity0
         .grid-container.disciplines-individual.loader-container
             +ListView(self.getDisciplines())(
                 selectedIndex = 0
@@ -58,13 +64,14 @@ redirectData = self.getRedirectData()
                         ).discipline-info
                             +CheckboxList('disciplineTypes', 'disciplineTypes', null).discipline-types
                                 each column in self.getGroupDisciplineTypes(item)
-                                    .column
-                                        each discType in column
-                                            +LabeledCheckbox(
-                                            discType.disciplineTypeData.getName(),
-                                                discType.disciplineTypeData.getId().valueOf(),
-                                                discType.selected,
-                                                false).change-discipline
+                                    if column.length > 0
+                                        .column
+                                            each discType in column
+                                                +LabeledCheckbox(
+                                                discType.disciplineTypeData.getName(),
+                                                    discType.disciplineTypeData.getId().valueOf(),
+                                                    discType.selected,
+                                                    false).change-discipline
                             .discipline-desciption-container
                                 .title Occurrence Note:
                                 .notes-area-container
