fixed for CHLK-2454 Class profile -> Grading. Need to change text on "No grades yet"

--- a/Chalkable.Web/assets/jade/activities/grading/GradingClassSummaryPart.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/GradingClassSummaryPart.jade
@@ -1,7 +1,7 @@
 .mps-container
     each item,i in self.getItems()
         div(class=(i==0) ? "open" : "", data-index=i).marking-period-container
-            div(data-tooltip=Msg.Avg + " " + (item.getAvg() || 0)).mp-title=Msg.Marking_Period + ' ' +  item.getMarkingPeriod().getName()
+            div(data-tooltip=(item.getAvg() != null ? Msg.Avg + " " + item.getAvg() : 'No grades yet')).mp-title=Msg.Marking_Period + ' ' +  item.getMarkingPeriod().getName()
                 .collapse
             .mp-data
                 .ann-types-container
