--- a/Chalkable.Web/assets/jade/activities/developer/apiCallSeq.jade
+++ b/Chalkable.Web/assets/jade/activities/developer/apiCallSeq.jade
@@ -1,10 +1,8 @@
-items = self.getApiCallSequence(self.getItems())
++ApiCallList('apiCalls')
+    items = self.getElements()
 
-if items.length == 0
-    .tree-node.single No calls required
-else
-    each item, index in items
-        if !item.separator
+    each item in items
+        if !item.isSeparator()
             .tree-node.way-item(data-param=item.getName())
                 span.title=item.getIndex()+ ". " + item.getName()
                     each param in item.getRequiredParams()
@@ -12,3 +10,5 @@ else
         else
             .tree-node.separator
                 span.way-arrow
+div.api-list-control-btn.left-btn#api_list_prev <
+div.api-list-control-btn.right-btn#api_list_next >
