--- a/Chalkable.Web/assets/jade/activities/calendar/announcement/WeekBarPopUp.jade
+++ b/Chalkable.Web/assets/jade/activities/calendar/announcement/WeekBarPopUp.jade
@@ -11,7 +11,8 @@
                             div
                                 p.title=item.getTitle()
                                 p.classname-under=item.getClassName() || item.getPersonName()
-    +ActionLink('announcement', 'add', null, chlk.models.announcement.AnnouncementTypeEnum.ANNOUNCEMENT, self.getDate().format('mm/dd/yy'), true).ann-button.plus-ann
+    if !self.getUserRole().isStudent()
+        +ActionLink('announcement', 'add', null, chlk.models.announcement.AnnouncementTypeEnum.ANNOUNCEMENT, self.getDate().format('mm/dd/yy'), true).ann-button.plus-ann
 
 
 
