--- a/Chalkable.Web/assets/jade/activities/calendar/announcement/WeekCalendarBody.jade
+++ b/Chalkable.Web/assets/jade/activities/calendar/announcement/WeekCalendarBody.jade
@@ -23,8 +23,9 @@
                                 if anns.length == 1
                                     li
                                         .announcement-calendar-item
+                                            //TODO add course
                                             .course-icon
-                                                img
+                                                +ClassImg(null, 24, 48).avatar.course-icon
                                             .text-container
                                                 p.typename=anns[0].getAnnouncementTypeName()
                                                 p.title=anns[0].getClassName()
