--- a/Chalkable.Web/assets/jade/activities/attendance/ClassListPage.jade
+++ b/Chalkable.Web/assets/jade/activities/attendance/ClassListPage.jade
@@ -30,7 +30,7 @@
         .top.panel-bg
             if(self.getItems().length > 0)
                 +ActionLinkWithPrepend('attendance', 'markAll',
-                    [selectedId.valueOf(), self.getItems()[0].getClassPeriodId().valueOf(), self.getDate().toStandardFormat()].concat(additionalParams)
+                    [selectedId.valueOf(), self.getItems()[0].getClassId().valueOf(), self.getDate().toStandardFormat()].concat(additionalParams)
                 )#all-present-link=Msg.Mark_all_Present
         .action-bar.buttons.filter
             .container.panel-bg
@@ -56,7 +56,7 @@
                                 len = self.getItems().length;
                                 if (needSuggestion && (i== 5 || (i == len - 1 && len < 6 && len > 2)))
                                     .keyboard-suggestion
-                                div(class="container-" + item.getClassPersonId().valueOf())
+                                div(class="container-" + item.getClassId().valueOf())
                                     -item.setReasons(self.getReasons());
                                     +RenderWith(item, self.getItemClassType())(
                                         needPresent = needPresent
